--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Celyes</title>
 </head>
 <body>
-    <h1>Celyes Personal blog - comming soon</h1>
+    <img src="image.png">
+    <p>Coming soon</p>
+    <a href="http://fb.com/celyes01">Facebook</a>
+    <a href="http://twitter.com/celyes01">Twitter</a>
+    <a href="http://linkedin.com/in/celyes">LinkedIn</a>
 </body>
 </html>
