--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
     <title>Celyes</title>
 </head>
 <body>
@@ -12,5 +14,7 @@
     <a href="http://fb.com/celyes01">Facebook</a>
     <a href="http://twitter.com/celyes01">Twitter</a>
     <a href="http://linkedin.com/in/celyes">LinkedIn</a>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
