--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <a href="http://twitter.com/celyes01">Twitter</a>
     <a href="http://linkedin.com/in/celyes">LinkedIn</a>
 
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
