--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <title>Celyes</title>
 </head>
 <body>
-    <img src="image.png">
-    <p>Coming soon</p>
-    <a href="http://fb.com/celyes01">Facebook</a>
-    <a href="http://twitter.com/celyes01">Twitter</a>
-    <a href="http://linkedin.com/in/celyes">LinkedIn</a>
 
+	<div class="parallax-container">
+		<div class="parallax">
+			
+		</div>
+	</div>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
