Modify meta tags in index pages

--- a/game/index.html
+++ b/game/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>training</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Simple guess the number game">
+  <title>Guess the number</title>
   <style type="text/css">
     
     html{
