--- a/vue-rating/index.html
+++ b/vue-rating/index.html
@@ -3,15 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<title>Vue JS</title>
-	<!--
-		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-	-->
-	<link rel="stylesheet" type="text/css" href="http://localhost/cdn/libraries/fontawesome/css/all.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 	<style type="text/css">
 		body{
 			text-align: center;
 			padding-top: 100px; 
-			font-family: sans-serif;
+			font-family: 'Roboto Mono', monospace;
 		}
 		span{
 			padding: 5px;	
@@ -26,7 +24,7 @@
 	</style>
 </head>
 <body>
-
+	<h1>Rate this app </h1>
 	<div id="app">
 		<br>
 		<span @mouseover="rate=item" class="fa fa-star fa-3x blue" v-for="item in parseInt(rate)"></span><span @mouseover="rate+=item" class="fa fa-star fa-3x grey" v-for="item in parseInt(5 - rate)"></span>
