--- a/vue-rating/index.html
+++ b/vue-rating/index.html
@@ -7,8 +7,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 	<style type="text/css">
 		body{
+			margin: 0;
+			height: 100%;
 			text-align: center;
-			padding-top: 100px; 
+			padding-top: 150px; 
 			font-family: 'Roboto Mono', monospace;
 		}
 		span{
@@ -16,25 +18,52 @@
 			cursor: pointer;
 		}
 		.blue{
-			color: #00f;
+			color: #1C78C0;
 		}
-		.grey{
-			color:#ccc;
+		.grey-blue{
+			color:#AAE7F1;
+		}
+		.green-block{
+			position: absolute;
+			top: -55px;
+			height: 100px;
+			width: 100%;
+			background: #41b883;
+			transform: skewY(-4deg);
+		}
+		.grey-block{
+			position: absolute;
+			top: -75px;
+			height: 100px;
+			width: 100%;
+			background: #34495e;
+			transform: skewY(-2deg);
 		}
 	</style>
 </head>
 <body>
-	<h1>Rate this app </h1>
+	<h1>Rate this app</h1>
 	<div id="app">
 		<br>
-		<span @mouseover="rate=item" class="fa fa-star fa-3x blue" v-for="item in parseInt(rate)"></span><span @mouseover="rate+=item" class="fa fa-star fa-3x grey" v-for="item in parseInt(5 - rate)"></span>
+		<span @mouseover="rate=item" class="fa fa-star fa-3x blue" v-for="item in parseInt(rate)"></span><span @mouseover="rate+=item" class="fa fa-star fa-3x grey-blue" v-for="item in parseInt(5 - rate)"></span>
 		<br>
 		<br>
 		<template v-if="rate > 1">{{rate}} Stars</template>
 		<template v-else>{{rate}} Star</template>
 	</div>	
-
-	<script src="js/vue.js"></script>
+	<br>
+	<br>
+	<p>
+		Made with Vue.js
+	</p>
+	<p><a href="https://github.com/celyes/celyes.github.io/tree/master/vue-rating">
+		<span class="fa fa-github fa-2x"></span>
+	</a>
+	</p>
+	<!--Just a simple decoration -->
+	<div class="green-block"></div>
+	<div class="grey-block"></div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js"></script>
 	<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 	 -->
 	<script src="js/script.js"></script>
