add practical example one

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#00BCD4">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    
+    <link rel="stylesheet" href="asset/css/style.css">
     <title>Celyes</title>
 </head>
 <body>
     <div class="container center">
         
         <img src="image.png" alt="celyes">
-        <p>coming soon</p>
-
+        <ul>
+            <li><a href="/vue-start/">Vue starter template</a></li>
+            <li><a href="/vue-rating/">Simple rating system with Vue</a></li>
+            <li><a href="/game/">Guess the number game!</a></li>
+        </ul>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
