update files - index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="/vue-start/">Vue starter template</a></li>
             <li><a href="/vue-rating/">Simple rating system with Vue</a></li>
             <li><a href="/game/">Guess the number game!</a></li>
+            <li><a href="/game/">Template to practice HTML + CSS!</a></li>
         </ul>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
