--- a/index.html
+++ b/index.html
@@ -7,22 +7,77 @@
     <meta name="description" content="Simple guess the number game">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#00BCD4">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="asset/css/style.css">
     <title>Celyes</title>
 </head>
 <body>
-    <div class="container center">
-        
-        <img src="image.png" alt="celyes">
-        <ul>
-            <li><a href="/vue-start/">Vue starter template</a></li>
-            <li><a href="/vue-rating/">Simple rating system with Vue</a></li>
-            <li><a href="/game/">Guess the number game!</a></li>
-            <li><a href="/game/">Template to practice HTML + CSS!</a></li>
-        </ul>
+    <div id="app">
+        <div v-if="name">
+            <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #f70;">
+                <div class="container">
+                        <a class="navbar-brand" href="#">{{title}}</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav mr-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{gfb}}">
+                                        <small>Facebook Group
+                                            <span class="fa fa-life-saver"></span>
+                                        </small>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{cfb}}">
+                                        <small>
+                                            Ilyes
+                                            <span class="fa fa-facebook-square"></span>
+                                        </small>    
+                                    </a>
+                                </li>
+                            </div>
+                        </div>
+                </div>
+                </nav>
+                <div class="container text-right">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <br>
+                            <div class="alert alert-primary" role="alert">
+                                <span class="fa fa-info-circle"></span>
+                                مرحبا بك يا {{name}} 
+                            </div>
+                            <br>
+                            <ul class="list-group">
+                                <li class="list-group-item disabled">
+                                    <b>المطلوب: </b>إختر إثنين من بين التطبيقات الآتية و قم بإنشاء مثيل له بأسلوبك 
+                                </li>
+                                <li class="list-group-item"><a href="/galaxy">صفحة بسيطة لوكالة إنشاء مواقع على الانترنت</a></li>
+                                <li class="list-group-item"><a href="/login/">نموذج تسجيل دخول</a></li>
+                                <li class="list-group-item"><a href="/persona">قالب بسيط لموقع خاص بتطبيق موبايل</a></li>
+                                <li class="list-group-item"><a href="/simple-store">موقع لشركة بيع لوازم الأطفال</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+        </div>
+        <div class="container" v-else>
+            <div class="row text-right">
+                <div class="col-sm-12">
+                    <div class="alert alert-danger my-4">
+                        <span class="fa fa-warning"></span>
+                        يجب عليك إدخال إسمك للمتابعة ! إضغط F5
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.21/vue.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.bundle.min.js"></script>
+    <script src="asset/js/main.js"></script>
 </body>
 </html>
