--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="app">
-        <div v-if="name">
+        <div v-if="name" id="welcome">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #f70;">
                 <div class="container">
                         <a class="navbar-brand" href="#">{{title}}</a>
@@ -56,7 +56,7 @@
                                     <b>المطلوب: </b>إختر إثنين من بين التطبيقات الآتية و قم بإنشاء مثيل له بأسلوبك 
                                 </li>
                                 <li class="list-group-item"><a href="/galaxy">صفحة بسيطة لوكالة إنشاء مواقع على الانترنت</a></li>
-                                <li class="list-group-item"><a href="/login/">نموذج تسجيل دخول</a></li>
+                                <li class="list-group-item"><a href="/login">نموذج تسجيل دخول</a></li>
                                 <li class="list-group-item"><a href="/persona">قالب بسيط لموقع خاص بتطبيق موبايل</a></li>
                                 <li class="list-group-item"><a href="/simple-store">موقع لشركة بيع لوازم الأطفال</a></li>
                             </ul>
