--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="app">
-        <div v-if="name" id="welcome">
+        <div v-if="name">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #f70;">
                 <div class="container">
                         <a class="navbar-brand" href="#">{{title}}</a>
