--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav mr-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{{gfb}}">
+                                    <a class="nav-link" href="https://fb.com/groups/CircaleWebTeam/">
                                         <small>Facebook Group
                                             <span class="fa fa-life-saver"></span>
                                         </small>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{{cfb}}">
+                                    <a class="nav-link" href="https://fb.com/celyes01">
                                         <small>
                                             Ilyes
                                             <span class="fa fa-facebook-square"></span>
