update website to be as CV

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav mr-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="https://fb.com/groups/CircaleWebTeam/">
-                                        <small>Facebook Group
-                                            <span class="fa fa-life-saver"></span>
+                                    <a href="" class="nav-link">
+                                        <small>
+                                            <span class="fa fa-user"></span>
+                                            Download CV
                                         </small>
                                     </a>
                                 </li>
@@ -47,27 +48,18 @@
                     <div class="col-sm-12">
                         <p class="mr-5">
                             <span class="fa fa-info-circle"></span>
-                            <b>المطلوب: </b>إختر إثنين من بين التطبيقات الآتية و قم بإنشاء مثيل له بأسلوبك 
+                            <p>بعض الاعمال</p>
                         </p>
                         <ul class="list-group">
-                            <li class="list-group-item"><a href="/galaxy">صفحة بسيطة لوكالة إنشاء مواقع على الانترنت</a></li>
-                            <li class="list-group-item"><a href="/login">نموذج تسجيل دخول</a></li>
-                            <li class="list-group-item"><a href="/persona">قالب بسيط لموقع خاص بتطبيق موبايل</a></li>
-                            <li class="list-group-item"><a href="/simple-store">موقع لشركة بيع لوازم الأطفال</a></li>
+                            <li class="list-group-item"><a href="/galaxy/">صفحة بسيطة لوكالة إنشاء مواقع على الانترنت</a></li>
+                            <li class="list-group-item"><a href="/login/">نموذج تسجيل دخول</a></li>
+                            <li class="list-group-item"><a href="/persona/">قالب بسيط لموقع خاص بتطبيق موبايل</a></li>
+                            <li class="list-group-item"><a href="/simple-store/">موقع لشركة بيع لوازم الأطفال</a></li>
+                            <li class="list-group-item"><a href="/game/">لعبة بسيطة بالجافاسكريبت</a></li>
+                            <li class="list-group-item"><a href="/vue-rating/">نظام تقييم بالـ Vue.js</a></li>
+                            <li class="list-group-item"><a href="/vue-start/">قالب للبدء بالـ Vue.js</a></li>
+                            <li class="list-group-item"><a href="/termulator/">طرفية نظام ماك (static)</a></li>
                         </ul>
-                    </div>
-                </div>
-                <div class="row mt-4">
-                    <div class="btn-group mx-auto" role="group" aria-labeled="Other links">
-                        <button type="button" class="btn">
-                            <a href="/game">JavaScript simple game</a>
-                        </button>
-                        <button type="button" class="btn">
-                            <a href="/vue-rating">Rating system with Vue.js</a>
-                        </button>
-                        <button type="button" class="btn">
-                            <a href="/vue-start/">Vue.js starter template</a>
-                        </button>
                     </div>
                 </div>
             </div>
