--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <div id="app">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #09f;">
                 <div class="container">
-                        <a class="navbar-brand" href="#">{{title}}</a>
+                        <a class="navbar-brand" href="/">{{title}}</a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav mr-auto">
                                 <li class="nav-item">
-                                    <a href="" class="nav-link">
+                                    <a href="/CV.pdf" class="nav-link">
                                         <small>
                                             <span class="fa fa-user"></span>
                                             Download CV
@@ -32,10 +32,26 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" href="https://github.com/celyes">
+                                        <small>
+                                            GitHub
+                                            <span class="fa fa-github"></span>
+                                        </small>    
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="https://fb.com/celyes01">
                                         <small>
-                                            Ilyes
+                                            Facebook
                                             <span class="fa fa-facebook-square"></span>
+                                        </small>    
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="https://www.linkedin.com/in/celyes">
+                                        <small>
+                                            LinkedIn
+                                            <span class="fa fa-linkedin"></span>
                                         </small>    
                                     </a>
                                 </li>
@@ -48,7 +64,7 @@
                     <div class="col-sm-12">
                         <p class="mr-5">
                             <span class="fa fa-info-circle"></span>
-                            <p>بعض الاعمال</p>
+                            بعض الاعمال
                         </p>
                         <ul class="list-group">
                             <li class="list-group-item"><a href="/galaxy/">صفحة بسيطة لوكالة إنشاء مواقع على الانترنت</a></li>
