--- a/termulator/index.html
+++ b/termulator/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="termulator">
         <h4>MAC OS X Terminal</h4>
-        <div class="container" v-if="showModal">       
+        <div class="container">       
             <div class="topbar">
                 <div class="red"></div>
                 <div class="yellow"></div>
@@ -25,27 +25,6 @@
             </div>
         </div>
             
-        <div class="dialog" v-else>
-            <div class="overlay"></div>
-            <div class="modal">
-                <div class="modal-topbar">
-                    <div class="red"></div>
-                    <div class="yellow"></div>
-                    <div class="green"></div>
-                    <div class="title">Enter your name</div>
-                </div>
-                <div class="modal-body">
-                    <form onsubmit="return false" v-on:submit="bindValues">
-                        <input type="text" placeholder="Name" id="user" autocomplete="off" v-model="userInput">
-                        <input type="text" placeholder="PC name" id="pc" autocomplete="off" v-model="pcInput">
-                        <button v-on:click="bindValues" class="btn-mac">Go</button>
-                        <p>
-                            <small>Click enter to skip</small>
-                        </p>    
-                    </form>
-                </div>
-            </div>
-        </div>
     </div>
     <script src="http://localhost/cdn/libraries/vuejs/vue.js"></script>
     <script src="assets/js/main.js"></script>
