--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                             <li class="list-group-item"><a href="/vue-rating/">نظام تقييم بالـ Vue.js</a></li>
                             <li class="list-group-item"><a href="/vue-start/">قالب للبدء بالـ Vue.js</a></li>
                             <li class="list-group-item"><a href="/termulator/">طرفية نظام ماك (static)</a></li>
+                            <li class="list-group-item"><a href="https://github.com/celyes/html-include">مكتبة جافاسكريبت لتضمين ملفات الـ HTML بكل سهولة</a></li>
                         </ul>
                     </div>
                 </div>
